fix jump bug and color fade

--- a/src/assets/scss/_type.scss
+++ b/src/assets/scss/_type.scss
@@ -1,7 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap');
+/*
+@font-face {
+    font-family: 'Protokoll';
+    src: url('assets/font/Light.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Protokoll';
+    src: url('assets/font/Bold.woff') format('woff');
+    font-weight: bold;
+}
+*/
 
 html {
     font-family: 'IBM Plex Sans', sans-serif;
+    //font-family: 'Protokoll';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
